Fix more alignment issues

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -8,6 +8,16 @@ $govuk-assets-path: "/";
 .dfe-page-hero {
   color: #fff;
 }
+
+.dfe-header__navigation-item {
+  padding: 12px 0;
+  margin: 0 30px 0 0;
+  a {
+    padding: 0;
+    margin: 0;
+  }
+}
+
 .header_description {
   color: #ccd8e1;
   font-weight: 700;
